--- a/src/components/card-list/card-list.styles.css
+++ b/src/components/card-list/card-list.styles.css
@@ -1,7 +1,7 @@
-.container div{
-    position: relative;
-    margin: 50px 50px;
-    background-image: linear-gradient(150deg,#19e94d,#07571b);
-    padding: 10px 10px;
-    border-radius: 15px;
-  }
+.card-list {
+  width: 85vw;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-gap: 20px;
+}
