--- a/src/components/search-box/search-box.styles.css
+++ b/src/components/search-box/search-box.styles.css
@@ -1,6 +1,6 @@
 .search-box{
     position: relative;
-    top: 20px;
+    /* top: 20px; */
     margin: 15px 15px;
     padding: 10px 10px;
     outline: none;
